UX: fix PM header title alignment (#13223)

--- a/app/assets/stylesheets/common/base/topic.scss
+++ b/app/assets/stylesheets/common/base/topic.scss
@@ -166,6 +166,10 @@
       color: var(--primary-medium);
     }
   }
+  .header-title .private-message-glyph-wrapper {
+    float: left;
+    margin-right: 0.25em;
+  }
 }
 
 a.badge-category {
